--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -48,7 +48,7 @@ svg {
 	width:				15%;
 }
 
-#map {
+#divmap {
 	position:			absolute;
 	top:				0%;
 	height:				100%;
@@ -57,22 +57,22 @@ svg {
 	background-color:	black;
 }
 	
-#menu {
+#divmenu {
 	position:			absolute;
-	top:				0%;
+	top:				10%;
 	left:				0%;
 	width:				100%;
-	height: 70%;
-	background-color: orange;
+	height:				30%;
+	background-color:	#222;
 }
 
-#mapcontrol {
+#divmapcontrol {
 	position:			absolute;
-	bottom:				0%;
-	height:				25%;
 	left:				0%;
 	width:				100%;
-	background-color: green;
+	top:				60%;
+	height:				20%;
+	background-color:	green;
 }
 
 
