--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -59,19 +59,19 @@ svg {
 	
 #divmenu {
 	position:			absolute;
-	top:				10%;
+	top:				0%;
+	height:				70%;
 	left:				0%;
 	width:				100%;
-	height:				30%;
 	background-color:	#222;
 }
 
 #divmapcontrol {
 	position:			absolute;
+	bottom:				0%;
+	height:				20%;
 	left:				0%;
 	width:				100%;
-	top:				60%;
-	height:				20%;
 	background-color:	green;
 }
 
