--- a/APP/css/ui.css
+++ b/APP/css/ui.css
@@ -5,7 +5,9 @@
 }
 
 .level1button:hover {
-	fill:				#3db7e4;
+	stroke:				#3db7e4;
+	stroke-width:		5px;
+	// fill:				#3db7e4;
 }
 
 .level2button {
