--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -5,7 +5,7 @@
 	margin:				0;
 }
 
-html,body,div,svg,h1,h2,h3,h4,h5,h6,
+html,body,div,h1,h2,h3,h4,h5,h6,
 p,a,ol,ul,li,table,canvas,
 footer,header,menu,nav {
 	-webkit-box-sizing:	border-box;		/* Safari/Chrome, other WebKit */
@@ -76,4 +76,7 @@ svg {
 	background-color:	black;
 }
 	
-
+.route{
+	position: absolute;
+	color: rgba(200,50,50,0.8);
+}
