--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -31,15 +31,6 @@ div {
 	font-family:		inherit;
 }
 
-svg {
-	font-family:		inherit;
-	-webkit-box-sizing:	border-box;		/* Safari/Chrome, other WebKit */
-	-moz-box-sizing:	border-box;		/* Firefox, other Gecko */
-	box-sizing:			border-box;		/* Opera/IE 8+ */
-	width:				100%;
-	height:				100%;
-}
-
 #divui {
 	position:			absolute;
 	top:				0%;
@@ -75,5 +66,10 @@ svg {
 	right:				0vw;
 	background-color:	black;
 }
-	
 
+
+.uisvgelement {
+	font-family:		inherit;
+	width:				100%;
+	height:				100%;
+}
