--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -48,7 +48,7 @@ div {
 	background-color:	black;
 }
 	
-#divdivvy {
+#divheader {
 	position:			absolute;
 	top:				0%;
 	height:				20vh;
@@ -67,11 +67,19 @@ div {
 #divmenu {
 	position:			absolute;
 	top:				20%;
-	bottom:				0%;
+	bottom:				8%;
 	left:				0%;
 	width:				80%;
 	background-color:	#444;
-	padding-top:		2vh;
+}
+
+#divtimerange {
+	position:			absolute;
+	bottom:				0%;
+	height:				8%;
+	left:				0%;
+	width:				80%;
+	background-color:	#444;
 }
 
 #divhome {
@@ -95,16 +103,18 @@ div {
 	bottom:				30vh;
 	left:				80%;
 	width:				20%;
-	padding-right:		2%;
+	display:			block;
+	margin:			`	auto;
 }
 
 #divmapcontrol {
 	position:			absolute;
-	bottom:				0%;
+	bottom:				0vh;
 	height:				30vh;
 	left:				80%;
 	width:				20%;
-	padding-right:		2%;
+	display:			block;
+	margin:			`	auto;
 }
 
 
