--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -96,6 +96,18 @@ div {
 	height:				100%;
 }
 
-.leaflet-popup-content{
-	font-size: 150%;
+div.leaflet-popup-content-wrapper,
+	.leaflet-popup-tip {
+		background: #333333;
+		box-shadow: 0 3px 14px rgba(0,0,0,0.4);
+	}
+
+div.leaflet-popup-tip {
+		background-color: #333333;
+		box-shadow: 0 3px 14px rgba(0,0,0,0.4);
 }
+.leaflet-popup-content{
+		background-color: #333333;
+		color: #CCCCC7;
+		font-size: 150%;
+	}
