Graphs hide and show

--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -124,7 +124,7 @@ div {
 	height:				100vw!important;
 	right:				0vh;
 	width:				40vh!important;
-	background-color:	black;
+	/*background-color:	black;*/
 }
 
 #divgraphs2 {
