--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -133,7 +133,7 @@ div {
 	height:				100vw!important;
 	right:				50vh;
 	width:				40vh!important;
-	background-color:	black;
+/*	background-color:	black;*/
 }
 	
 .route{
