--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -121,18 +121,18 @@ div {
 #divgraphs1 {
 	position:			absolute;
 	top:				0%;
-	height:				100vw!important;
-	right:				0vh;
-	width:				40vh!important;
+	height:				100%;
+	right:				0%;
+	width:				25%;
 	/*background-color:	black;*/
 }
 
 .divgraphs2 {
 	position:			absolute;
 	top:				0%;
-	height:				100vw!important;
-	left:				50vh;
-	width:				40vh!important;
+	height:				10%;
+	left:				20%
+	width:				25%;
 	background-color:	black;
 }	
 
