--- a/APP/css/style.css
+++ b/APP/css/style.css
@@ -121,21 +121,20 @@ div {
 #divgraphs1 {
 	position:			absolute;
 	top:				0%;
-	height:				100%;
-	right:				0%;
-	width:				25%;
+	height:				100vw!important;
+	right:				0vh;
+	width:				40vh!important;
 	/*background-color:	black;*/
 }
 
 .divgraphs2 {
 	position:			absolute;
 	top:				0%;
-	height:				10%;
-	left:				20%
-	width:				25%;
+	height:				100vw!important;
+	left:				50vh;
+	width:				40vh!important;
 	background-color:	black;
 }	
-
 .route{
 	position: absolute;
 	color: rgba(200,50,50,0.8);
